# financial-manager

./: Cargo.toml  test.xlsx
src/: api.rs  b3.rs  crypto.rs  lib.rs  main.rs
